# manage_system

./: CMakeLists.txt  chooseform.cpp  chooseform.h  chooseform.ui  data.json  dress.cpp  dress.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manage.cpp  manage.h  manageform.cpp  manageform.h  manageform.ui  people.cpp  people.h  searchform.cpp  searchform.h  searchform.ui  setting.cpp  setting.h  signupform.cpp  signupform.h  signupform.ui  statisticform.cpp  statisticform.h  statisticform.ui  user.db
